--- a/JSPS_Funds.html
+++ b/JSPS_Funds.html
@@ -20,45 +20,64 @@
 <div id="toptitle">
 <h1>JSPS funded programs for interns/collaborators/postdocs</h1>
 </div>
-<p>The Japan Society for the Promotion of Science (JSPS) provides some funded programs to support highly qualified researches (i.e., for both Ph.D. and non-Ph.D. holders) to visit and collaborate with colleagues at Japanese universities and research institutes.</p>
+<p>The Japan Society for the Promotion of Science (JSPS) provides some funded programs to support highly qualified researches (i.e., for both Ph.D. and non-Ph.D. holders) to visit and collaborate with colleagues at Japanese universities and research institutes.
+</p>
 <h3><a href="https://www.jsps.go.jp/english/e-fellow/e-oubei-s/index.html" target=&ldquo;blank&rdquo;>JSPS Short-term Program (PE)</a></h3>
-<p>To provide opportunities for pre-/post-doctoral researchers from the <b>US, Canada and Europe</b> to conduct, under the guidance of their hosts, cooperative research with leading research groups in universities and other Japanese institutions.</p>
-<p>Some brief information is as following:</p>
+<p>To provide opportunities for pre-/post-doctoral researchers from the <b>US, Canada and Europe</b> to conduct, under the guidance of their hosts, cooperative research with leading research groups in universities and other Japanese institutions.
+</p>
+<p>Some brief information is as following:
+</p>
 <ul>
-<li><p>Duration: 1 to 12 months</p>
+<li><p>Duration: 1 to 12 months
+</p>
 </li>
-<li><p>Support: (i) a round-trip air tickets, (ii) allowances (¥362,000/month for PhD holders, or  ¥200,000/month for non-PhD holders), and (iii) travel insurance.</p>
+<li><p>Support: (i) a round-trip air tickets, (ii) allowances (¥362,000/month for PhD holders, or  ¥200,000/month for non-PhD holders), and (iii) travel insurance.
+</p>
 </li>
-<li><p>Eligible countries are the US, Canada, European Union countries, UK, Switzerland, Norway and Russia.</p>
+<li><p>Eligible countries are the US, Canada, European Union countries, UK, Switzerland, Norway and Russia.
+</p>
 </li>
 </ul>
-<p>For detailed and updated information, please visit <a href="https://www.jsps.go.jp/english/e-fellow/e-oubei-s/index.html" target=&ldquo;blank&rdquo;>the JSPS official website</a>. </p>
+<p>For detailed and updated information, please visit <a href="https://www.jsps.go.jp/english/e-fellow/e-oubei-s/index.html" target=&ldquo;blank&rdquo;>the JSPS official website</a>. 
+</p>
 <h3><a href="https://www.jsps.go.jp/english/e-fellow/e-asean-africa-s/index.html" target=&ldquo;blank&rdquo;>JSPS Short-term Program (PA)</a></h3>
-<p>To provide opportunities for pre-/post-doctoral researchers from <b>ASEAN and Africa</b> to conduct, under the guidance of their hosts, cooperative research with leading research groups in universities and other Japanese institutions.</p>
-<p>Some brief information is as following:</p>
+<p>To provide opportunities for pre-/post-doctoral researchers from <b>ASEAN and Africa</b> to conduct, under the guidance of their hosts, cooperative research with leading research groups in universities and other Japanese institutions.
+</p>
+<p>Some brief information is as following:
+</p>
 <ul>
-<li><p>Duration: 1 to 12 months</p>
+<li><p>Duration: 1 to 12 months
+</p>
 </li>
-<li><p>Support: (i) a round-trip air tickets, (ii) allowances (¥362,000/month for PhD holders, or  ¥200,000/month for non-PhD holders), and (iii) travel insurance.</p>
+<li><p>Support: (i) a round-trip air tickets, (ii) allowances (¥362,000/month for PhD holders, or  ¥200,000/month for non-PhD holders), and (iii) travel insurance.
+</p>
 </li>
-<li><p>Eligible countries are ASEAN member countries (Brunei, Cambodia, Indonesia, Myanmar, Laos, Malaysia, Philippines, Singapore, Thailand and <b>Viet Nam</b>) and African countries (Algeria, Angola, Benin, Botswana, Burkina Faso, Burundi, Cameroon, Central African Republic, Chad, Comoros, Republic of the Congo, Democratic Republic of the Congo, Cote d’Ivoire, Djibouti, Egypt, Eswatini, Equatorial Guinea, Eritrea, Ethiopia, Gabon, Gambia, Ghana, Guinea, Guinea-Bissau, Kenya, Lesotho, Liberia, Libya, Madagascar, Malawi, Mali, Mauritania, Mauritius, Morocco, Mozambique, Namibia, Niger, Nigeria, Republic of Cabo Verde, Republic of Seychelles, Rwanda, Sao Tome and Principe, Senegal, Sierra Leone, Somalia, South Africa, South Sudan, Sudan, Tanzania, Togo, Tunisia, Uganda, Zambia, and Zimbabwe).</p>
+<li><p>Eligible countries are ASEAN member countries (Brunei, Cambodia, Indonesia, Myanmar, Laos, Malaysia, Philippines, Singapore, Thailand and <b>Viet Nam</b>) and African countries (Algeria, Angola, Benin, Botswana, Burkina Faso, Burundi, Cameroon, Central African Republic, Chad, Comoros, Republic of the Congo, Democratic Republic of the Congo, Cote d’Ivoire, Djibouti, Egypt, Eswatini, Equatorial Guinea, Eritrea, Ethiopia, Gabon, Gambia, Ghana, Guinea, Guinea-Bissau, Kenya, Lesotho, Liberia, Libya, Madagascar, Malawi, Mali, Mauritania, Mauritius, Morocco, Mozambique, Namibia, Niger, Nigeria, Republic of Cabo Verde, Republic of Seychelles, Rwanda, Sao Tome and Principe, Senegal, Sierra Leone, Somalia, South Africa, South Sudan, Sudan, Tanzania, Togo, Tunisia, Uganda, Zambia, and Zimbabwe).
+</p>
 </li>
 </ul>
-<p>For detailed and updated information, please visit <a href="https://www.jsps.go.jp/english/e-fellow/e-asean-africa-s/index.html" target=&ldquo;blank&rdquo;>the JSPS official website</a>.</p>
+<p>For detailed and updated information, please visit <a href="https://www.jsps.go.jp/english/e-fellow/e-asean-africa-s/index.html" target=&ldquo;blank&rdquo;>the JSPS official website</a>.
+</p>
 <h3><a href="https://www.jsps.go.jp/english/e-fellow/e-ippan/index.html" target=&ldquo;blank&rdquo;>JSPS Postdocs Standard Program</a></h3>
-<p>The program provides an opportunity to conduct collaborative research for young overseas researchers under the guidance of their hosts in universities and other research institutions in Japan.</p>
-<p>Some brief information is as following:</p>
+<p>The program provides an opportunity to conduct collaborative research for young overseas researchers under the guidance of their hosts in universities and other research institutions in Japan.
+</p>
+<p>Some brief information is as following:
+</p>
 <ul>
-<li><p>Duration: 12 to 24 months</p>
+<li><p>Duration: 12 to 24 months
+</p>
 </li>
-<li><p>Support: (i) a round-trip air tickets, (ii) allowances (¥362,000/month), and (iii) others including a settling-in allowance (¥200,000), and travel insurance.</p>
+<li><p>Support: (i) a round-trip air tickets, (ii) allowances (¥362,000/month), and (iii) others including a settling-in allowance (¥200,000), and travel insurance.
+</p>
 </li>
 </ul>
-<p>For detailed and updated information, please visit <a href="https://www.jsps.go.jp/english/e-fellow/e-ippan/index.html" target=&ldquo;blank&rdquo;>the JSPS official website</a>. </p>
-<p><br /><br /></p>
+<p>For detailed and updated information, please visit <a href="https://www.jsps.go.jp/english/e-fellow/e-ippan/index.html" target=&ldquo;blank&rdquo;>the JSPS official website</a>. 
+</p>
+<p><br /><br />
+</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-27 15:26:32 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-15 14:27:21 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
