--- a/professional.html
+++ b/professional.html
@@ -21,147 +21,210 @@
 <h1>Tam Le - Professional Activities</h1>
 </div>
 <h2>Professional Services</h2>
-<p><b>Area Chair (Meta-Reviewer) / Senior Program Committee</b> </p>
+<p><b>Area Chair (Meta-Reviewer) / Senior Program Committee</b> 
+</p>
 <ul>
-<li><p>AC, International Conference on Machine Learning (<b>ICML</b>): <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>-2025</p>
+<li><p>AC, International Conference on Machine Learning (<b>ICML</b>): <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>-2025
+</p>
 </li>
-<li><p>AC, International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>-2025</p>
+<li><p>AC, International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>-2025
+</p>
 </li>
-<li><p>AC, International Conference on Learning Representations (<b>ICLR</b>): <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>-2025</p>
+<li><p>AC, International Conference on Learning Representations (<b>ICLR</b>): <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>-2025
+</p>
 </li>
-<li><p>SPC, AAAI Conference on Artificial Intelligence (AAAI): 2025</p>
+<li><p>SPC, AAAI Conference on Artificial Intelligence (AAAI): 2025
+</p>
 </li>
-<li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022-2024</p>
+<li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022-2024
+</p>
 </li>
-<li><p>AC, Asian Conference on Machine Learning (ACML): 2022-2024</p>
+<li><p>AC, Asian Conference on Machine Learning (ACML): 2022-2024
+</p>
 </li>
-<li><p>SPC, International Joint Conference on Artificial Intelligence (IJCAI): 2021-2022</p>
+<li><p>SPC, International Joint Conference on Artificial Intelligence (IJCAI): 2021-2022
+</p>
 </li>
 </ul>
-<p><b>Program Committee / Journal Reviewer</b></p>
+<p><b>Program Committee / Journal Reviewer</b>
+</p>
 <ul>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2023</p>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2023
+</p>
 </li>
-<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019-2024</p>
+<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019-2024
+</p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2020-2023</p>
+<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2020-2023
+</p>
 </li>
-<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2023</p>
+<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2023
+</p>
 </li>
-<li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020-2021, 2023</p>
+<li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020-2021, 2023
+</p>
 </li>
-<li><p>Machine Learning Journal (MLJ): 2017-2019</p>
+<li><p>Machine Learning Journal (MLJ): 2017-2019
+</p>
 </li>
-<li><p>Transactions on Pattern Analysis and Machine Intelligence (PAMI): 2021-2022</p>
+<li><p>Transactions on Pattern Analysis and Machine Intelligence (PAMI): 2021-2022
+</p>
 </li>
-<li><p>Discrete and Computational Geometry Journal (DCG): 2021 </p>
+<li><p>Discrete and Computational Geometry Journal (DCG): 2021 
+</p>
 </li>
-<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2020</p>
+<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2020
+</p>
 </li>
-<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2024</p>
+<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2024
+</p>
 </li>
-<li><p>Conference on Computer Vision and Pattern Recognition (CVPR): 2021</p>
+<li><p>Conference on Computer Vision and Pattern Recognition (CVPR): 2021
+</p>
 </li>
-<li><p>Data Mining and Knowledge Discovery Journal (DMKD): 2016-2017</p>
+<li><p>Data Mining and Knowledge Discovery Journal (DMKD): 2016-2017
+</p>
 </li>
-<li><p>Asian Conference on Machine Learning (ACML): 2013-2019</p>
+<li><p>Asian Conference on Machine Learning (ACML): 2013-2019
+</p>
 </li>
 </ul>
-<p><b>Member of Organizing Team</b></p>
+<p><b>Member of Organizing Team</b>
+</p>
 <ul>
-<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.</p>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.
+</p>
 </li>
-<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/trendsinML/" target=&ldquo;blank&rdquo;>Trends in Machine Learning workshop, Kyoto, Japan, 2014</a>.</p>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/trendsinML/" target=&ldquo;blank&rdquo;>Trends in Machine Learning workshop, Kyoto, Japan, 2014</a>.
+</p>
 </li>
-<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2012</a>.</p>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2012</a>.
+</p>
 </li>
 </ul>
 <h2>Visitors / ISM Joint-Research</h2>
 <ul>
-<li><p><a href="https://cscarv.github.io/" target=&ldquo;blank&rdquo;>Christopher Scarvelis</a> (MIT CSAIL): <a href="https://www.jsps.go.jp/english/e-fellow/e-oubei-s/index.html" target=&ldquo;blank&rdquo;>JSPS Postdoctoral Fellowships for Research in Japan, Short-Term Program</a> (March, 2023 - April, 2023).</p>
+<li><p><a href="https://cscarv.github.io/" target=&ldquo;blank&rdquo;>Christopher Scarvelis</a> (MIT CSAIL): <a href="https://www.jsps.go.jp/english/e-fellow/e-oubei-s/index.html" target=&ldquo;blank&rdquo;>JSPS Postdoctoral Fellowships for Research in Japan, Short-Term Program</a> (March, 2023 - April, 2023).
+</p>
 </li>
-<li><p><a href="https://thongpham.net/" target=&ldquo;blank&rdquo;>Thong Pham</a> (Shiga University): <a href="https://www.ism.ac.jp/kyodo/index_j.html" target=&ldquo;blank&rdquo;>ISM Joint-research</a> (FY2023&ndash;FY2024).</p>
+<li><p><a href="https://thongpham.net/" target=&ldquo;blank&rdquo;>Thong Pham</a> (Shiga University): <a href="https://www.ism.ac.jp/kyodo/index_j.html" target=&ldquo;blank&rdquo;>ISM Joint-research</a> (FY2023&ndash;FY2024).
+</p>
 </li>
 </ul>
 <h2>Teaching Assistant</h2>
-<p><b><a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University</a></b> (for M.Sc. program)<br /></p>
+<p><b><a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University</a></b> (for M.Sc. program)<br />
+</p>
 <ul>
-<li><p>2015, Perspective in Informatics, Informatics Seminar.</p>
+<li><p>2015, Perspective in Informatics, Informatics Seminar.
+</p>
 </li>
-<li><p>2013, Large Scale Optimization and Machine Learning, Marco Cuturi.</p>
+<li><p>2013, Large Scale Optimization and Machine Learning, Marco Cuturi.
+</p>
 </li>
-<li><p>2013, Pattern Recognition: Advances, Marco Cuturi.</p>
+<li><p>2013, Pattern Recognition: Advances, Marco Cuturi.
+</p>
 </li>
-<li><p>2013, Statistical Machine Learning, Marco Cuturi &amp; Akihiro Yamamoto.</p>
+<li><p>2013, Statistical Machine Learning, Marco Cuturi &amp; Akihiro Yamamoto.
+</p>
 </li>
 </ul>
-<p><b><a href="http://www.jvn.edu.vn" target=&ldquo;blank&rdquo;>John von Neumann Institute (JVN)</a></b> (for M.Sc. program) <br /></p>
+<p><b><a href="http://www.jvn.edu.vn" target=&ldquo;blank&rdquo;>John von Neumann Institute (JVN)</a></b> (for M.Sc. program) <br />
+</p>
 <ul>
-<li><p>2012, Introduction to Linear Systems, Giuseppe Calafiore - Politecnico di Torino, Italy.</p>
+<li><p>2012, Introduction to Linear Systems, Giuseppe Calafiore - Politecnico di Torino, Italy.
+</p>
 </li>
-<li><p>2011, Introduction to Linear Systems, Giuseppe Calafiore - Politecnico di Torino, Italy.</p>
+<li><p>2011, Introduction to Linear Systems, Giuseppe Calafiore - Politecnico di Torino, Italy.
+</p>
 </li>
 </ul>
-<p><b><a href="http://www.fit.hcmus.edu.vn/vn/Default.aspx?tabid=325" target=&ldquo;blank&rdquo;>University of Science, VNU-HCMC</a></b> (for B.Sc. program) <i>(Selected)</i> <br /></p>
+<p><b><a href="http://www.fit.hcmus.edu.vn/vn/Default.aspx?tabid=325" target=&ldquo;blank&rdquo;>University of Science, VNU-HCMC</a></b> (for B.Sc. program) <i>(Selected)</i> <br />
+</p>
 <ul>
-<li><p>2012, Machine Learning, Marco Cuturi - Kyoto University, Japan.</p>
+<li><p>2012, Machine Learning, Marco Cuturi - Kyoto University, Japan.
+</p>
 </li>
-<li><p>2012, Game Theory, Multi-agents and social algorithm, Thuc Vu - Google Inc, USA.</p>
+<li><p>2012, Game Theory, Multi-agents and social algorithm, Thuc Vu - Google Inc, USA.
+</p>
 </li>
-<li><p>2011, Optimization Models for Engineering, Laurent El Ghaoui - University of California, Berkeley, USA.</p>
+<li><p>2011, Optimization Models for Engineering, Laurent El Ghaoui - University of California, Berkeley, USA.
+</p>
 </li>
 </ul>
 <h2>Misc</h2>
-<p><b>Summer Schools</b></p>
+<p><b>Summer Schools</b>
+</p>
 <ul>
-<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.</p>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.
+</p>
 </li>
-<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS series), Kyoto, Japan, 2012</a>.</p>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS series), Kyoto, Japan, 2012</a>.
+</p>
 </li>
-<li><p><a href="http://mlss2011.comp.nus.edu.sg/" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS series), Singapore, 2011</a>.</p>
+<li><p><a href="http://mlss2011.comp.nus.edu.sg/" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS series), Singapore, 2011</a>.
+</p>
 </li>
 </ul>
-<p><b>Conferences</b></p>
+<p><b>Conferences</b>
+</p>
 <ul>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2024.</p>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2024.
+</p>
 </li>
-<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2023.</p>
+<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2024.
+</p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2019-2024.</p>
+<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2019-2024.
+</p>
 </li>
-<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2022.</p>
+<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2022.
+</p>
 </li>
-<li><p>Conference on Learning Theory (COLT): 2018, 2020-2021.</p>
+<li><p>Conference on Learning Theory (COLT): 2018, 2020-2021.
+</p>
 </li>
-<li><p>Symposium on Theory of Computing (STOC): 2021.</p>
+<li><p>Symposium on Theory of Computing (STOC): 2021.
+</p>
 </li>
-<li><p>Computer Vision and Pattern Recognition (CVPR): 2021.</p>
+<li><p>Computer Vision and Pattern Recognition (CVPR): 2021.
+</p>
 </li>
-<li><p>Association for Computational Linguistics (ACL): 2020.</p>
+<li><p>Association for Computational Linguistics (ACL): 2020.
+</p>
 </li>
-<li><p>ACM Conference on Fairness, Accountability, and Transparency (FAccT): 2021.</p>
+<li><p>ACM Conference on Fairness, Accountability, and Transparency (FAccT): 2021.
+</p>
 </li>
 </ul>
-<p><b>Internships</b></p>
+<p><b>Internships</b>
+</p>
 <ul>
-<li><p>01/2014 - 02/2014, Internship student, <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.</p>
+<li><p>01/2014 - 02/2014, Internship student, <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.
+</p>
 <ul>
-<li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.</p>
+<li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.
+</p>
 </li></ul>
 </li>
-<li><p>03/2013, Internship student at <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.</p>
+<li><p>03/2013, Internship student at <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.
+</p>
 <ul>
-<li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.</p>
+<li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.
+</p>
 </li></ul>
 </li>
-<li><p>08/2010 - 02/2011, Internship student, <a href="http://www.nii.ac.jp/en/" target=&ldquo;blank&rdquo;>National Institute of Informatics, Tokyo, Japan</a>.</p>
+<li><p>08/2010 - 02/2011, Internship student, <a href="http://www.nii.ac.jp/en/" target=&ldquo;blank&rdquo;>National Institute of Informatics, Tokyo, Japan</a>.
+</p>
 <ul>
-<li><p>Supervisor: <a href="http://research.nii.ac.jp/~sugimoto/" target=&ldquo;blank&rdquo;>Professor Akihiro Sugimoto</a></p>
+<li><p>Supervisor: <a href="http://research.nii.ac.jp/~sugimoto/" target=&ldquo;blank&rdquo;>Professor Akihiro Sugimoto</a>
+</p>
 </li></ul>
 </li>
-<li><p>04/2009 - 06/2009, Internship student, <a href="http://www.toyota-ti.ac.jp/" target=&ldquo;blank&rdquo;>Toyota Technological Institute of Nagoya, Japan</a>.</p>
+<li><p>04/2009 - 06/2009, Internship student, <a href="http://www.toyota-ti.ac.jp/" target=&ldquo;blank&rdquo;>Toyota Technological Institute of Nagoya, Japan</a>.
+</p>
 <ul>
-<li><p>Supervisor: <a href="http://www.ttic.edu/mita.php" target=&ldquo;blank&rdquo;>Professor Seiichi Mita</a></p>
+<li><p>Supervisor: <a href="http://www.ttic.edu/mita.php" target=&ldquo;blank&rdquo;>Professor Seiichi Mita</a>
+</p>
 </li>
 </ul>
 
@@ -169,7 +232,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-27 15:26:32 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-15 14:27:21 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
