--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <h2>News</h2>
 <ul>
+<li><p>23-Jan-2025, Our 3 papers have been accepted to <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;25</b></a>.
+</p>
+<ul>
+<li><p><a href="https://arxiv.org/pdf/2406.01130v1" target=&ldquo;blank&rdquo;>SAVA: Scalable Learning-Agnostic Data Valuation</a>, joint work with Samuel Kessler, and Vu Nguyen.
+</p>
+</li>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Distance-Based Tree-Sliced Wasserstein Distance</a>, joint work with Hoang Tran, Khoi Nguyen, Trang Pham, Thanh Chu, and Tan Nguyen.
+</p>
+</li>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Spherical Tree-Sliced Wasserstein Distance</a>, joint work with Hoang Tran, Thanh Chu, Khoi Nguyen, Trang Pham, and Tan Nguyen.
+</p>
+</li></ul>
+</li>
 <li><p>22-Nov-2024, I will serve as Area Chair for <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;25</b></a>.
 </p>
 </li>
@@ -122,7 +135,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-15 14:27:21 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-23 12:05:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
