--- a/publication.html
+++ b/publication.html
@@ -24,6 +24,27 @@
 </p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Distance-Based Tree-Sliced Wasserstein Distance</font></a>  <br /> 
+International Conference on Learning Representation (<b>ICLR</b>), 2025. (<i>Acceptance rate: 32.08% out of about 11500 submissions</i>) <br />
+Hoang V. Tran<font color="red">*</font>, Khoi Nguyen<font color="red">*</font>, Trang Pham, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Spherical Tree-Sliced Wasserstein Distance</font></a>  <br /> 
+International Conference on Learning Representation (<b>ICLR</b>), 2025. (<i>Acceptance rate: 32.08% out of about 11500 submissions</i>) <br />
+Hoang V. Tran<font color="red">*</font>, Thanh Chu<font color="red">*</font>, Khoi Nguyen, Trang Pham,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/pdf/2406.01130v1" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a>  <br /> 
+International Conference on Learning Representation (<b>ICLR</b>), 2025. (<i>Acceptance rate: 32.08% out of about 11500 submissions</i>) <br />
+Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Vu Nguyen.
+</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://proceedings.mlr.press/v235/le24a.html" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev Transport for Probability Measures on a Graph</font></a>  <br /> 
 International Conference on Machine Learning (<b>ICML</b>), 2024. (<i>Acceptance rate: 2609/9473</i>) <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.
@@ -131,28 +152,7 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2406.13725" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance on a System of Lines</font></a>  <br /> 
 ArXiv, 2024. <br /> 
-Viet-Hoang Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
-</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/pdf/2406.01130v1" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a>  <br /> 
-ArXiv, 2024. <br /> 
-Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Vu Nguyen.
-</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Spherical Tree-Sliced Wasserstein Distance</font></a>  <br /> 
-<i>Under review</i>, 2024. <br /> 
-Viet-Hoang Tran<font color="red">*</font>, Thanh Chu<font color="red">*</font>, Khoi Nguyen, Trang Pham,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
-</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Distance-Based Tree-Sliced Wasserstein Distance</font></a>  <br /> 
-<i>Under review</i>, 2024. <br /> 
-Viet-Hoang Tran<font color="red">*</font>, Khoi Nguyen<font color="red">*</font>, Trang Pham, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
 </ul>
@@ -353,7 +353,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-15 14:27:21 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-23 12:05:47 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
