--- a/publication.html
+++ b/publication.html
@@ -158,14 +158,14 @@ Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, T
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2502.00739" target=&ldquo;blank&rdquo;><font color="blue">Orlicz-Sobolev Transport for Unbalanced Measures on a Graph</font></a>  <br /> 
-Under review. <br />
+ArXiv, 2025. <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu.
 </p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2502.00737" target=&ldquo;blank&rdquo;><font color="blue">Scalable Sobolev IPM for Probability Measures on a Graph</font></a>  <br /> 
-Under review. <br />
+ArXiv, 2025. <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu.
 </p>
 </li>
@@ -374,7 +374,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-04 12:24:20 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-02-04 16:00:58 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
