--- a/publication.html
+++ b/publication.html
@@ -24,21 +24,21 @@
 </p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Distance-Based Tree-Sliced Wasserstein Distance</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=OiQttMHwce" target=&ldquo;blank&rdquo;><font color="blue">Distance-Based Tree-Sliced Wasserstein Distance</font></a>  <br /> 
 International Conference on Learning Representation (<b>ICLR</b>), 2025. (<i>Acceptance rate: 32.08% out of about 11500 submissions</i>) <br />
 Hoang V. Tran<font color="red">*</font>, Khoi Nguyen<font color="red">*</font>, Trang Pham, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
 </ul>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Spherical Tree-Sliced Wasserstein Distance</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=FPQzXME9NK" target=&ldquo;blank&rdquo;><font color="blue">Spherical Tree-Sliced Wasserstein Distance</font></a>  <br /> 
 International Conference on Learning Representation (<b>ICLR</b>), 2025. (<i>Acceptance rate: 32.08% out of about 11500 submissions</i>) <br />
 Hoang V. Tran<font color="red">*</font>, Thanh Chu<font color="red">*</font>, Khoi Nguyen, Trang Pham,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2406.01130v1" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=0UCoWxPhQ4" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a>  <br /> 
 International Conference on Learning Representation (<b>ICLR</b>), 2025. (<i>Acceptance rate: 32.08% out of about 11500 submissions</i>) <br />
 Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Vu Nguyen.
 </p>
@@ -374,7 +374,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-04 16:00:58 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-01 23:31:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
