--- a/index.html
+++ b/index.html
@@ -33,7 +33,19 @@ Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_t
 Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. <br />
 </p>
 </td></tr></table>
-<p>Research interests: Machine learning, optimal transport, geometric methods, kernel methods. <br />
+<p><b>Research interests: Machine learning, optimal transport.</b> <br />
+</p>
+<p>I have been working on theory, methodology, and application of learning with complex and large-scale data and models from mathematical perspectives. More concretely, my recent research includes:
+</p>
+<ul>
+<li><p>Optimal transport (OT) theory: for measures with graph structure, for variants with functional geometric structure.
+</p>
+</li>
+<li><p>Scalability, robustness, and efficiency of OT for learning with measures in machine learning and deep learning, including deep generative models, data valuation for training with large noisy datasets.
+</p>
+</li>
+</ul>
+<p>I would love to expand my research spectrum to more interesting and impactful research problems.
 </p>
 <h2>Contact</h2>
 <div class="infoblock">
@@ -135,7 +147,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-01 23:31:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-06 00:19:05 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
