--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 <li><p>Scalability, robustness, and efficiency of OT for learning with measures in machine learning and deep learning, including deep generative models, data valuation for training with large noisy datasets.
 </p>
 </li>
+<li><p>RKHS theory for nonlinearity on learning with complex data and model, including topological data, probability measures with OT geometry.
+</p>
+</li>
 </ul>
 <p>I would love to expand my research spectrum to more interesting and impactful research problems.
 </p>
@@ -147,7 +150,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-06 00:19:05 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-06 00:37:28 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
