--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 <p>I have been working on theory, methodology, and application of learning with complex and large-scale data and models from mathematical perspectives. More concretely, my recent research includes:
 </p>
 <ul>
-<li><p>Optimal transport (OT) theory: for measures with graph structure, for variants with functional geometric structure.
+<li><p>Scalability, robustness, and efficiency of optimal transport for learning with measures in machine learning and deep learning, including deep generative models, data valuation for training with large noisy datasets.
 </p>
 </li>
-<li><p>Scalability, robustness, and efficiency of OT for learning with measures in machine learning and deep learning, including deep generative models, data valuation for training with large noisy datasets.
+<li><p>Optimal transport theory: for measures with graph structure, for variants with functional geometric structure.
 </p>
 </li>
 <li><p>RKHS theory for nonlinearity on learning with complex data and models, including topological data, probability measures with OT geometry.
@@ -150,7 +150,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-06 00:39:57 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-06 00:41:29 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
