--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 </td></tr></table>
 <p><b>Research interests: Machine learning, optimal transport.</b> <br />
 </p>
-<p>I have been working on theory, methodology, and application of learning with complex and large-scale data and models from mathematical perspectives. More concretely, my recent research includes:
+<p>I have been working on theory, methodology, and application of learning with complex, large-scale data and models from mathematical perspectives. More concretely, my recent research includes:
 </p>
 <ul>
 <li><p>Optimal transport theory: for measures with graph structure, for variants with functional geometric structure.
@@ -150,7 +150,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-06 09:26:28 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-06 09:34:45 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
