--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 <li><p>Optimal transport theory: for measures with graph structure, for variants with functional geometric structure.
 </p>
 </li>
-<li><p>Scalability, robustness, and efficiency of optimal transport for learning with measures in machine learning and deep learning, including deep generative models, diffusion models, data valuation for training with large noisy datasets.
+<li><p>Scalability, robustness, and efficiency of optimal transport for learning with measures in machine learning and deep learning, including deep generative models, diffusion models, data valuation for LLM pretraining.
 </p>
 </li>
 <li><p>RKHS theory: for probability measures with OT geometry, for topological data analysis.
@@ -150,7 +150,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-06 09:34:45 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-06 10:26:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
